
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct pt_sec_file_mapping {int lock; } ;


 int mtx_lock (int *) ;
 int pte_bad_lock ;
 int pte_internal ;
 int thrd_success ;

__attribute__((used)) static int fmap_lock(struct pt_sec_file_mapping *mapping)
{
 if (!mapping)
  return -pte_internal;
 return 0;
}
